--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
         <div class="apresentacao__links">
           <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
           <a
-            class="apresentacao__links__link"
+            class="apresentacao__links__navegacao"
             href="https://github.com/rafaballerini"
           >
             <img src="./assets/github.png" />
             Github
           </a>
           <a
-            class="apresentacao__links__link"
+            class="apresentacao__links__navegacao"
             href="https://linkedin.com/in/rafaellaballerini"
           >
             <img src="./assets/linkedin.png" />
             linkedin
           </a>
           <a
-            class="apresentacao__links__link"
+            class="apresentacao__links__navegacao"
             href="https://twitch.tv/guilimadev"
           >
             <img src="./assets/twitch.png" />
@@ -51,7 +51,11 @@
           </a>
         </div>
       </section>
-      <img src="./assets/imagem.png" alt="Foto da Joana Santos programando" />
+      <img
+        class="apresentacao__imagem"
+        src="./assets/imagem.png"
+        alt="Foto da Joana Santos programando"
+      />
     </main>
     <footer class="rodape">
       <p class="rodape__texto">Desenvolvido por Alura.</p>
